# Reel2Real

./: .gitignore  README.md  api_logs.txt  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  celery_app.py  config.py  db.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/models/: __init__.py  reel.py
backend/app/services/: extractor.py  transcriber.py
backend/app/tasks/: pipeline.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Navbar.jsx
frontend/src/pages/: AboutPage.jsx  HomePage.jsx  ProcessingPage.jsx  ResultsPage.jsx  SavedPage.jsx
frontend/src/store/: useAppStore.js
